syntax = "proto3";
package oaas.deployment;

import "common.proto";

// Shared deployment-related types extracted to avoid proto import cycles.

message FunctionDeploymentSpec {
  string function_key = 1;
  // reserved field numbers 2 and 4 (previously replicas and image)
  reserved 2, 4;
  // Optional human-readable description
  optional string description = 5;
  // Optional available location/environment name (e.g., "edge", "cloud")
  optional string available_location = 6;
  // Per-function non-functional requirements
  optional oaas.common.NfrRequirements nfr_requirements = 7;
  // Provisioning configuration (image, ports, scaling, resources)
  optional oaas.common.ProvisionConfig provision_config = 8;
  // Arbitrary config key/value pairs (injected as ENV)
  map<string, string> config = 9;
}

// Reference to a child infrastructure/resource object created for a deployment
// (e.g., Deployment, Service, HPA, Monitor, etc.). Names are env-local.
message ResourceReference {
  string kind = 1;
  string name = 2;
  // Optional namespace (for namespaced resources)
  optional string namespace = 3;
  // Optional UID for stronger correlation/auditing
  optional string uid = 4;
}

message InvocationRoutes {
  map<string, FunctionRoute> fn_routes = 1;
  repeated string disabled_fn = 2;
}

message FunctionRoute {
  string url = 1;
  optional bool stateless = 2;
  optional bool standby = 3;
  repeated uint64 active_group = 4;
  // Optional function key reference; if url is empty and this is set,
  // CRM will resolve the concrete URL based on deployment naming conventions.
  optional string function_key = 5;
}

message OdgmConfig {
  repeated string collections = 1;
  optional uint32 partition_count = 2;
  optional uint32 replica_count = 3;
  optional string shard_type = 4;
  InvocationRoutes invocations = 5;
  map<string, string> options = 6;
  // Optional ODGM log env filter (e.g., "info,openraft=info,zenoh=warn")
  optional string log = 7;
  // Mapping of target environment -> list of assigned ODGM node ids for that environment
  map<string, OdgmNodeIds> env_node_ids = 8;
  // Optional assigned ODGM node id for THIS deployment unit's target environment (convenience)
  optional uint64 odgm_node_id = 9;
  // Optional per-collection explicit shard assignments generated by PM.
  // Key = collection name, Value = list of assignments (one per partition in order).
  map<string, CollectionShardAssignments> collection_assignments = 10;
}

// Wrapper to allow map<string, repeated uint64>
message OdgmNodeIds {
  repeated uint64 ids = 1;
}

// Mirrors oprc-data.proto ShardAssignment but duplicated to avoid import cycles.
message ShardAssignmentSpec {
  optional uint64 primary = 1;         // shard id of primary replica
  repeated uint64 replica = 2;         // node ids of replicas (owners)
  repeated uint64 shard_ids = 3;       // shard ids for replicas (length == replica len)
}

message CollectionShardAssignments {
  repeated ShardAssignmentSpec assignments = 1; // one entry per partition
}

// Function binding info from the class to preserve method names and mapping
message ClassFunctionBinding {
  // Method/binding name used by the class (e.g., "ec", "ra")
  string name = 1;
  // Target function key (e.g., "Record.echo")
  string function_key = 2;
  // Access modifier (e.g., "public"); keep as string for now
  optional string access_modifier = 3;
  // Stateless hint copied from package/class binding
  optional bool stateless = 4;
  // Parameter names (if any)
  repeated string parameters = 5;
}

message DeploymentUnit {
  string id = 1;
  string package_name = 2;
  string class_key = 3;
  reserved 4;
  repeated FunctionDeploymentSpec functions = 5;
  string target_env = 6;
  // Pass function bindings so CRM can map method->function without guessing
  repeated ClassFunctionBinding function_bindings = 7;
  oaas.common.Timestamp created_at = 8;
  OdgmConfig odgm_config = 9;
}
